minot text-align bug

--- a/src/index.css
+++ b/src/index.css
@@ -249,6 +249,7 @@ body {
     float: none;
     width: 100%;
     height: auto;
+    text-align: center;
   }
 } 
 
